Code wrap button fix

--- a/style.css
+++ b/style.css
@@ -586,7 +586,7 @@ i {
     background-color: #1F1E1E;
     border-radius: 80px;
     padding: 0 18px;
-    margin: 20px 0px 10px;
+    margin: 20px 0px 20px;
     will-change: transform;
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
